--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=filtrospring
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/filtrospringboot
+spring.datasource.username=campus2023
+spring.datasource.password=campus2023
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Configuración del servidor
+server.port=8080
